--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
                 <!-- Example 1 -->
                 <div class="comparison-item">
                     <h3 class="prompt-text">Original: "Walk" → Edited: "Walk faster"</h3>
-                    <div class="comparison-grid">
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Original Motion</h4>
+                            <img src="assets/motion-editing/original_example1.gif" alt="Original motion" class="motion-gif">
+                        </div>
                         <div class="method-item">
                             <h4>CoMo</h4>
                             <img src="assets/motion-editing/como_example1.gif" alt="CoMo result" class="motion-gif">
@@ -88,7 +92,11 @@
                 <!-- Example 2 -->
                 <div class="comparison-item">
                     <h3 class="prompt-text">Original: "Jump" → Edited: "Jump higher"</h3>
-                    <div class="comparison-grid">
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Original Motion</h4>
+                            <img src="assets/motion-editing/original_example2.gif" alt="Original motion" class="motion-gif">
+                        </div>
                         <div class="method-item">
                             <h4>CoMo</h4>
                             <img src="assets/motion-editing/como_example2.gif" alt="CoMo result" class="motion-gif">
@@ -103,7 +111,11 @@
                 <!-- Example 3 -->
                 <div class="comparison-item">
                     <h3 class="prompt-text">Original: "Sit" → Edited: "Sit and wave"</h3>
-                    <div class="comparison-grid">
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Original Motion</h4>
+                            <img src="assets/motion-editing/original_example3.gif" alt="Original motion" class="motion-gif">
+                        </div>
                         <div class="method-item">
                             <h4>CoMo</h4>
                             <img src="assets/motion-editing/como_example3.gif" alt="CoMo result" class="motion-gif">
