--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 
                 <!-- Example 1 -->
                 <div class="comparison-item">
-                    <h3 class="prompt-text">Original: "Walk" → Edited: "Walk faster"</h3>
+                    <h3 class="prompt-text">Original Description: "A person does a handstand"<br>Edit Instruction: "Keep your legs wide apart"</h3>
                     <div class="comparison-grid-editing">
                         <div class="method-item">
                             <h4>Original Motion</h4>
@@ -89,28 +89,9 @@
                     </div>
                 </div>
 
-                <!-- Example 2 -->
-                <div class="comparison-item">
-                    <h3 class="prompt-text">Original: "Jump" → Edited: "Jump higher"</h3>
-                    <div class="comparison-grid-editing">
-                        <div class="method-item">
-                            <h4>Original Motion</h4>
-                            <img src="assets/motion-editing/original_example2.gif" alt="Original motion" class="motion-gif">
-                        </div>
-                        <div class="method-item">
-                            <h4>CoMo</h4>
-                            <img src="assets/motion-editing/como_example2.gif" alt="CoMo result" class="motion-gif">
-                        </div>
-                        <div class="method-item">
-                            <h4>Ours</h4>
-                            <img src="assets/motion-editing/ours_example2.gif" alt="Our result" class="motion-gif">
-                        </div>
-                    </div>
-                </div>
-
                 <!-- Example 3 -->
                 <div class="comparison-item">
-                    <h3 class="prompt-text">Original: "Sit" → Edited: "Sit and wave"</h3>
+                    <h3 class="prompt-text">Original Description: "A man stands and raises both of his arms overhead and then makes up and downwards movements"<br>Edit Instruction: "Bend both arms more deeply"</h3>
                     <div class="comparison-grid-editing">
                         <div class="method-item">
                             <h4>Original Motion</h4>
@@ -128,6 +109,140 @@
                 </div>
 
                 <!-- Add more examples as needed -->
+
+                <!-- Example 4 -->
+                <div class="comparison-item">
+                <h3 class="prompt-text">Original Description: "A man lowers his arms and places his hands on his knees"<br>Edit Instruction: "Bend the knees more deeply"</h3>
+                <div class="comparison-grid-editing">
+                    <div class="method-item">
+                    <h4>Original Motion</h4>
+                    <img src="assets/motion-editing/original_example4.gif" alt="Original motion" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>CoMo</h4>
+                    <img src="assets/motion-editing/como_example4.gif" alt="CoMo result" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>Ours</h4>
+                    <img src="assets/motion-editing/ours_example4.gif" alt="Our result" class="motion-gif">
+                    </div>
+                </div>
+                </div>
+
+                <!-- Example 5 -->
+                <div class="comparison-item">
+                <h3 class="prompt-text">Original Description: "This person bends forward as if to bow"<br>Edit Instruction: "Bring both hands closer together"</h3>
+                <div class="comparison-grid-editing">
+                    <div class="method-item">
+                    <h4>Original Motion</h4>
+                    <img src="assets/motion-editing/original_example5.gif" alt="Original motion" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>CoMo</h4>
+                    <img src="assets/motion-editing/como_example5.gif" alt="CoMo result" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>Ours</h4>
+                    <img src="assets/motion-editing/ours_example5.gif" alt="Our result" class="motion-gif">
+                    </div>
+                </div>
+                </div>
+
+                <!-- Example 6 -->
+                <div class="comparison-item">
+                <h3 class="prompt-text">Original Description: "A person waves their arms over their heads"<br>Edit Instruction: "Bend both arms more deeply"</h3>
+                <div class="comparison-grid-editing">
+                    <div class="method-item">
+                    <h4>Original Motion</h4>
+                    <img src="assets/motion-editing/original_example6.gif" alt="Original motion" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>CoMo</h4>
+                    <img src="assets/motion-editing/como_example6.gif" alt="CoMo result" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>Ours</h4>
+                    <img src="assets/motion-editing/ours_example6.gif" alt="Our result" class="motion-gif">
+                    </div>
+                </div>
+                </div>
+
+                <!-- Example 8 -->
+                <div class="comparison-item">
+                <h3 class="prompt-text">Original Description: "The person put his hands on his knees"<br>Edit Instruction: "Bend both arms more deeply"</h3>
+                <div class="comparison-grid-editing">
+                    <div class="method-item">
+                    <h4>Original Motion</h4>
+                    <img src="assets/motion-editing/original_example8.gif" alt="Original motion" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>CoMo</h4>
+                    <img src="assets/motion-editing/como_example8.gif" alt="CoMo result" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>Ours</h4>
+                    <img src="assets/motion-editing/ours_example8.gif" alt="Our result" class="motion-gif">
+                    </div>
+                </div>
+                </div>
+
+                <!-- Example 9 -->
+                <div class="comparison-item">
+                <h3 class="prompt-text">Original Description: "Person is jogging straight ahead"<br>Edit Instruction: "Make the jog slower"</h3>
+                <div class="comparison-grid-editing">
+                    <div class="method-item">
+                    <h4>Original Motion</h4>
+                    <img src="assets/motion-editing/original_example9.gif" alt="Original motion" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>CoMo</h4>
+                    <img src="assets/motion-editing/como_example9.gif" alt="CoMo result" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>Ours</h4>
+                    <img src="assets/motion-editing/ours_example9.gif" alt="Our result" class="motion-gif">
+                    </div>
+                </div>
+                </div>
+
+                <!-- Example 10 -->
+                <div class="comparison-item">
+                <h3 class="prompt-text">Original Description: "A person walking really slow forward."<br>Edit Instruction: "Add a clap at the end"</h3>
+                <div class="comparison-grid-editing">
+                    <div class="method-item">
+                    <h4>Original Motion</h4>
+                    <img src="assets/motion-editing/original_example10.gif" alt="Original motion" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>CoMo</h4>
+                    <img src="assets/motion-editing/como_example10.gif" alt="CoMo result" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>Ours</h4>
+                    <img src="assets/motion-editing/ours_example10.gif" alt="Our result" class="motion-gif">
+                    </div>
+                </div>
+                </div>
+
+                <!-- Example 10 -->
+                <div class="comparison-item">
+                <h3 class="prompt-text">Original Description: "A person walks forward and then appears to bump into something, then continues walking forward."<br>Edit Instruction: "Make the bump more realistic."</h3>
+                <div class="comparison-grid-editing">
+                    <div class="method-item">
+                    <h4>Original Motion</h4>
+                    <img src="assets/motion-editing/original_example11.gif" alt="Original motion" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>CoMo</h4>
+                    <img src="assets/motion-editing/como_example11.gif" alt="CoMo result" class="motion-gif">
+                    </div>
+                    <div class="method-item">
+                    <h4>Ours</h4>
+                    <img src="assets/motion-editing/ours_example11.gif" alt="Our result" class="motion-gif">
+                    </div>
+                </div>
+                </div>
+
             </section>
         </div>
 
