--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
                 
                 <!-- Example 1 -->
                 <div class="comparison-item">
-                    <h3 class="prompt-text">"A person walks forward slowly"</h3>
-                    <div class="comparison-grid">
+                    <h3 class="prompt-text">"Text Input: A person casually walks abruptly steps left and then recovers to a straight walk"</h3>
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Ground Truth</h4>
+                            <img src="assets/text-to-motion/gt_example1.gif" alt="Ground Truth" class="motion-gif">
+                        </div>
                         <div class="method-item">
                             <h4>CoMo</h4>
                             <img src="assets/text-to-motion/como_example1.gif" alt="CoMo result" class="motion-gif">
@@ -33,25 +37,15 @@
                     </div>
                 </div>
 
-                <!-- Example 2 -->
-                <div class="comparison-item">
-                    <h3 class="prompt-text">"A person jumps up and down"</h3>
-                    <div class="comparison-grid">
-                        <div class="method-item">
-                            <h4>CoMo</h4>
-                            <img src="assets/text-to-motion/como_example2.gif" alt="CoMo result" class="motion-gif">
-                        </div>
-                        <div class="method-item">
-                            <h4>Ours</h4>
-                            <img src="assets/text-to-motion/ours_example2.gif" alt="Our result" class="motion-gif">
-                        </div>
-                    </div>
-                </div>
 
                 <!-- Example 3 -->
                 <div class="comparison-item">
-                    <h3 class="prompt-text">"A person raises both arms"</h3>
-                    <div class="comparison-grid">
+                    <h3 class="prompt-text">"Text Input: A person quickly walks forward"</h3>
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Ground Truth</h4>
+                            <img src="assets/text-to-motion/gt_example3.gif" alt="Ground Truth" class="motion-gif">
+                        </div>
                         <div class="method-item">
                             <h4>CoMo</h4>
                             <img src="assets/text-to-motion/como_example3.gif" alt="CoMo result" class="motion-gif">
@@ -63,7 +57,142 @@
                     </div>
                 </div>
 
+                <!-- Example 4 -->
+                <div class="comparison-item">
+                    <h3 class="prompt-text">"Text Input: Running forward taking a right turn then running to the left"</h3>
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Ground Truth</h4>
+                            <img src="assets/text-to-motion/gt_example4.gif" alt="Ground Truth" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>CoMo</h4>
+                            <img src="assets/text-to-motion/como_example4.gif" alt="CoMo result" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>Ours</h4>
+                            <img src="assets/text-to-motion/ours_example4.gif" alt="Our result" class="motion-gif">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Example 5 -->
+                <div class="comparison-item">
+                    <h3 class="prompt-text">"Text Input: A person, while running quickly, bends down and picks something up"</h3>
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Ground Truth</h4>
+                            <img src="assets/text-to-motion/gt_example5.gif" alt="Ground Truth" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>CoMo</h4>
+                            <img src="assets/text-to-motion/como_example5.gif" alt="CoMo result" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>Ours</h4>
+                            <img src="assets/text-to-motion/ours_example5.gif" alt="Our result" class="motion-gif">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Example 6 -->
+                <div class="comparison-item">
+                    <h3 class="prompt-text">"Text Input: A person runs forward then abruptly turns to the right and continues running"</h3>
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Ground Truth</h4>
+                            <img src="assets/text-to-motion/gt_example6.gif" alt="Ground Truth" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>CoMo</h4>
+                            <img src="assets/text-to-motion/como_example6.gif" alt="CoMo result" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>Ours</h4>
+                            <img src="assets/text-to-motion/ours_example6.gif" alt="Our result" class="motion-gif">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Example 8 -->
+                <div class="comparison-item">
+                    <h3 class="prompt-text">"Text Input: A person runs forward quickly, stops on their right foot, then runs in a different direction"</h3>
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Ground Truth</h4>
+                            <img src="assets/text-to-motion/gt_example8.gif" alt="Ground Truth" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>CoMo</h4>
+                            <img src="assets/text-to-motion/como_example8.gif" alt="CoMo result" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>Ours</h4>
+                            <img src="assets/text-to-motion/ours_example8.gif" alt="Our result" class="motion-gif">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Example 9 -->
+                <div class="comparison-item">
+                    <h3 class="prompt-text">"Text Input: The soccer player kicks the ball"</h3>
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Ground Truth</h4>
+                            <img src="assets/text-to-motion/gt_example10.gif" alt="Ground Truth" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>CoMo</h4>
+                            <img src="assets/text-to-motion/como_example10.gif" alt="CoMo result" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>Ours</h4>
+                            <img src="assets/text-to-motion/ours_example10.gif" alt="Our result" class="motion-gif">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Example 9 -->
+                <div class="comparison-item">
+                    <h3 class="prompt-text">"Text Input: A person looks around, steps back, then runs forward while throwing an object"</h3>
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Ground Truth</h4>
+                            <img src="assets/text-to-motion/gt_example11.gif" alt="Ground Truth" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>CoMo</h4>
+                            <img src="assets/text-to-motion/como_example11.gif" alt="CoMo result" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>Ours</h4>
+                            <img src="assets/text-to-motion/ours_example11.gif" alt="Our result" class="motion-gif">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Example 9 -->
+                <div class="comparison-item">
+                    <h3 class="prompt-text">"Text Input: A person runs moderately in an oval shape"</h3>
+                    <div class="comparison-grid-editing">
+                        <div class="method-item">
+                            <h4>Ground Truth</h4>
+                            <img src="assets/text-to-motion/gt_example12.gif" alt="Ground Truth" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>CoMo</h4>
+                            <img src="assets/text-to-motion/como_example12.gif" alt="CoMo result" class="motion-gif">
+                        </div>
+                        <div class="method-item">
+                            <h4>Ours</h4>
+                            <img src="assets/text-to-motion/ours_example12.gif" alt="Our result" class="motion-gif">
+                        </div>
+                    </div>
+                </div>
+
+
                 <!-- Add more examples as needed -->
+                 
             </section>
 
             <!-- Right Section: Motion Editing -->
